2007-07-03  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py (Vishnu.getBundlerBasket): If the
	registry needs a rebuild, avoid scanning the directories twice.

	* flumotion/common/registry.py (RegistryDirectory.rebuildNeeded):
	Change from lastModified, returns whether a directory needs a
	rebuild. Catch OSError for missing files. Also see if the
	directory mtime changed to catch new files.
	(ComponentRegistry.rebuildNeeded): Check to see if the set of
	paths changed, as well.
	(ComponentRegistry._getRegistryPathsFromEnviron): New helper.
	(ComponentRegistry.verify): Use rebuildNeeded(), as it does
	everything we need. See #665. Fixes #641.

2007-07-02  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/client.py (Window._clearMessages): Fix bug
	when the manager goes away.

	* flumotion/component/base/scheduler.py (Event.__init__): Add some
	assertions, and the ability to specify recur as a timedelta.
	(Scheduler.addEvent): Document recur as timedelta.

	* flumotion/admin/rrdmon/config.py (ConfigParser._parseSource):
	Require absolute filenames for <rrd-file>. Add <component-id>,
	also required. Add docs.

	* flumotion/admin/rrdmon/rrdmon.py: Actually implement. Add docs.
	Fixes #626.

	* conf/managers/default/flows/ogg-test-theora.xml: Fix up for The
	Great Renaming.

	* conf/rrdmon/default.xml: Fix up; require <rrd-file>.

2007-07-02  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/componentview.py
	  (ComponentView.object_active_to_inactive):
	Keep compatibility with managers running older code.

2007-07-02  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/patternswitch.py
	  (PatternEventSwitcher, PatternEventSwitcher.do_check,
	  PatternEventSwitcher.checkConfig,
	  PatternEventSwitcher.configure_pipeline):
	Get the pad as the value stored is a string not a pad!
	Validate the eater-with-stream-markers property value passed
	in.